SMW-1904 - Add foregroundServiceTypes required for api 34 (android 14). Removed ACTIVITY_RECOGNITION check because its not required. Bumped package version.

--- a/plugin.xml
+++ b/plugin.xml
@@ -134,6 +134,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
             <service
+                android:foregroundServiceType="dataSync" 
                 android:name="com.marianhello.bgloc.sync.SyncService"
                 android:exported="true"
                 android:process=":sync">
@@ -159,6 +160,7 @@
                 android:exported="false"
                 android:syncable="true"/>
             <service
+                android:foregroundServiceType="location" 
                 android:enabled="true"
                 android:exported="false"
                 android:name="com.marianhello.bgloc.service.LocationServiceImpl"                
@@ -178,8 +180,7 @@
             <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
             <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
             <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-            <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-            <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+            <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />            
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
             <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
             <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
